[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pullbug"
description = "Get bugged via Discord or Slack to merge your GitHub pull requests or close open issues."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/pullbug" }
scripts = { pullbug = "pullbug.cli:main" }
dependencies = [
    "PyGithub == 2.8.*",
    "requests == 2.*",
    "slack_sdk == 3.*",
    "woodchips == 2.*",
]
optional-dependencies = { dev = [
    "bandit == 1.9.*",
    "build == 1.3.*",
    "mypy == 1.18.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
    "ruff == 0.14.*",
] }

[tool.setuptools.dynamic]
version = { attr = "pullbug._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.setuptools.package-data]
pullbug = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "E501"]

[tool.mypy]
disable_error_code = "import-untyped"
